--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "embla-carousel": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
