--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.4",
+    "antd": "^5.15.3",
     "axios": "^1.5.0",
     "embla-carousel": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
