--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
