--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "antd": "^5.15.3",
     "axios": "^1.5.0",
     "embla-carousel": "^8.0.0",
