--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
+    "js-cookie": "^3.0.5",
     "next": "12.1.0",
     "react": "^17.0.2",
+    "react-cookie": "^7.1.4",
     "react-dom": "17.0.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
